add input forms for date and color

--- a/index.html
+++ b/index.html
@@ -44,5 +44,18 @@
         Rat
       </label>
     </div>
+
+    <h4>What is your favorite date of all time?</h4>
+    <div class="form-group">
+      <label for="date">Favorite Date</label>
+      <input id="date" class="form-control" type="date">
+    </div>
+
+    <h4>What is your favorite color?</h4>
+    <div class="form-group">
+      <label for="color">Favorite Color></label>
+      <input id="color" class="form-control" type="color">
+    </div>
+
   </body>
 </html>
